add createActor, createActorTitle, and createRating functions
Signed-off-by: Mansi Puri <mansi@praxent.com>

--- a/holly-mansi-app/package.json
+++ b/holly-mansi-app/package.json
@@ -6,7 +6,9 @@
     "babyparse": "^0.4.6",
     "fast-csv": "^2.4.0",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
