--- a/holly-mansi-app/package.json
+++ b/holly-mansi-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "babyparse": "^0.4.6",
     "fast-csv": "^2.4.0",
+    "lodash": "^4.17.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
